properly handle l, lu, ul integers in our preprocessor

this finally fixes parsing of gcc 4.7 headers

thanks again to Ivan Shapovalov for this patch, which
I cleaned up a bit and added a unit test

the question now: how should ll, ull, llu integers be
handled by a c++11 compliant preprocessor?

BUG: 297604
REVIEW: 104498